--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
 
   <section class="contact-info-section">
       <div class="content">
-          <p><a href="tel:+123456789">415-261-0761</a></p>
-          <p><a href="mailto:your.email@gmail.com">davidsmobilecardetailing@gmail.com</a></p>
+          <p><a href="tel:+4152610761">415-261-0761</a></p>
+          <p><a href="mailto:davidsmobilecardetailing@gmail.com">davidsmobilecardetailing@gmail.com</a></p>
           <p><a href="https://www.instagram.com/davids_car_detailing_?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">Instagram</a></p>
       </div>
   </section>
