--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <!-- End of removed dropdown code -->
     <a href="contact.html">Contact</a>
   <!-- <img src="images/Logo.jpg" alt="Logo" class="logo"> -->
-  <a href="tel:+123456789">415-261-0761</a>
+  <a href="tel:4152610761">415-261-0761</a>
 
 
 </div>
