--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="service1.html">Service</a>
     <!-- End of removed dropdown code -->
     <a href="contact.html">Contact</a>
-    <a href="tel:+123456789">415-261-0761</a>
+    <a href="tel:4152610761">415-261-0761</a>
 
   <!-- <img src="images/Logo.jpg" alt="Logo" class="logo"> -->
 
